examples/test/testpolicy18879.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18879
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key26: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value24
          key27: value39
      podSelector:
        matchLabels:
          key40: value13
          key19: value23
